methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:16: error: not found: value baisseBroose
  prendBiscuit;baisseBroose;leveBrosse;
               ^